# pico-sdk-zig-function

./: .gitignore  CMakeLists.txt  README.md  build.zig  build.zig.zon  zig_function_use.c
src/: main.zig  pico_sdk.c
